--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.0.6",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.474.0",
     "micro": "^10.0.1",
     "next": "^15.2.3",
@@ -58,6 +59,7 @@
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.15.1",
+    "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.1.7",
     "stripe": "^17.6.0",
     "tailwind-merge": "^2.6.0",
@@ -68,6 +70,7 @@
   },
   "devDependencies": {
     "@softgenai/element-tagger": "^0.0.1",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
